--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,150 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.column-div:nth-child(1) {
+  background-color: #efefef;
+  min-height: 100px;
+  margin-top: 2em;
+  padding: 10px;
+}
+
+.single-card {
+  background-color: #ffffff;
+  margin-bottom: 5px;
+  padding: 10px;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  color: #222;
+  display: flex;
+  justify-content: space-between;
+}
+
+.single-card img {
+  width: 17px;
+  height: 17px;
+}
+
+.single-card p {
+  font-size: 15px;
+  word-break: break-all;
+  margin-right: 10px;
+}
+
+.column-div:nth-child(2) {
+  background-color: #efefef;
+  min-height: 100px;
+  margin-top: 3.5em;
+  padding: 10px;
+  position: relative;
+}
+
+.column-div:nth-child(2)::before {
+  content: "Drag spam here";
+  position: absolute;
+  top: -28px;
+  left: 0;
+  color: darkred;
+}
+
+.save-btn,
+.global-btn {
+  border: none;
+  outline: none;
+  cursor: pointer;
+
+  margin-right: 1em;
+  color: white;
+  background-color: #4eafa8;
+  padding: 4px 10px;
+  border-radius: 2px;
+  font-weight: bold;
+  transition: 0.3s all linear;
+}
+
+.save-btn:hover,
+.global-btn:hover {
+  background: #157972;
+}
+
+.no-cards-found {
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;
+  text-transform: capitalize;
+  color: #333;
+}
+
+.loading-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+.loading {
+  width: 90px;
+  height: 90px;
+  border: 4px solid #e2e2e2;
+  border-radius: 50%;
+  border-top: 4px solid #4eafa8;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.data-error {
+  display: flex;
+  justify-content: center;
+  margin-top: 2em;
+  color: darkred;
+}
+
+.card-error {
+  font-size: 14px;
+  color: darkred;
+}
+
+.bottom-btn-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1em;
+}
+
+.save-btn-wrapper {
+  display: flex;
+}
+
+.view-more-btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  text-decoration: underline;
+  color: #4eafa8;
+  transition: 0.3s all linear;
+  letter-spacing: 1px;
+}
+
+.view-more-btn:hover {
+  color: #105854;
 }
